--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,11 +28,9 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
-              <a href="{{ site.baseurl }}/about">About</a>
-              <a href="{{ site.baseurl }}/archive">Archive</a>
+              <a href="{{ site.baseurl }}/">About Me</a>
+              <a href="{{ site.baseurl }}/works">Works</a>
+              <a href="{{ site.baseurl }}/resume">Resume</a>
             </nav>
           </header>
         </div>
