--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
     {% seo title=false %}
+    
     {% include meta.html %}
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css" />
@@ -30,7 +31,13 @@
             <nav>
               <a href="{{ site.baseurl }}/">About Me</a>
               <a href="{{ site.baseurl }}/works">Works</a>
+              <!--<a href="{{ site.baseurl }}/misc">Misc</a>-->
               <a href="{{ site.baseurl }}/resume">Resume</a>
+              <!---
+              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
+              <a href="{{ site.baseurl }}/search">Search</a>
+              <a href="{{ site.baseurl }}/archive">Archive</a>       
+              --->
             </nav>
           </header>
         </div>
