--- a/assets/style.scss
+++ b/assets/style.scss
@@ -291,9 +291,6 @@ p > img {
 
   img {
     border-radius: 5px;
-    width: 70px;
-    height: 70px;
-    object-fit: cover;
   }
 }
 
@@ -464,6 +461,83 @@ body:after {
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
   line-height: 1.2;
+}
+
+.resume div{
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  margin-bottom: -2%;
+  display: block;
+  font-size: .9em;  
+}
+
+.resume h5 {
+    float: right;
+    font-family: $helveticaNeue;
+    font-size: 18px;
+}
+
+.resume h1{
+  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  text-align: center;
+  font-weight: bold;
+  font-kerning: auto;
+  font-feature-settings: "kern","liga","dlig","hlig","cswh";
+  font-size: 1em;
+  margin-bottom: -2%;
+  margin-top: 6%;
+}
+
+.resume h1:after{
+    content:' ';
+    display:block;
+    border:.1px solid black;
+}
+
+.resume h2{
+  font-family: "Open Sans", sans-serif;
+  color: black;
+  text-align: left;
+  margin-bottom: -2%;
+  display: block;
+  font-size: 1em;
+}
+
+.resume h3{
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  margin-bottom: -2%;
+  margin-top: -.6%;
+  display: block;
+  font-size: .8em;
+  color: darkslategray;
+}
+
+.resume h4{
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  margin-bottom: -2%;
+  display: block;
+  font-size: .8em;
+  color: gray;
+}
+
+.resume ul{
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  margin-bottom: -2%;
+  display: block;
+  font-size: .9em;
+  color: black;
+}
+
+.resume p{
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  margin-bottom: -2%;
+  display: block;
+  font-size: .9em;
+  color: black;
 }
 
 .author_title{
