--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,12 @@
 
             <nav>
               <a href="{{ site.baseurl }}/about">About Me</a>
-              <a href="{{ site.baseurl }}/works">Works</a>
-              <!--<a href="{{ site.baseurl }}/misc">Misc</a>-->
+              <!--
+                <a href="{{ site.baseurl }}/works">Works</a>
+              -->
+              <!--
+                <a href="{{ site.baseurl }}/misc">Misc</a>
+              -->
               <a href="{{ site.baseurl }}/resume">Resume</a>
               <!---
               <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
