--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">About Me</a>
+              <a href="{{ site.baseurl }}/about">About Me</a>
                 <a href="{{ site.baseurl }}/works">Works</a>
               <!--
                 <a href="{{ site.baseurl }}/misc">Misc</a>
